Target latest API

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 
 <ul>
   <li>
-    <a href="https://api.demo.openfisca.org/">Web API</a>
+    <a href="https://api.demo.openfisca.org/latest">Web API</a>
   </li>
   <li>
     <a href="https://legislation.demo.openfisca.org/">Legislation Explorer</a>
